--- a/src/main/resources/APachas/src/app/components/groups/createGroup/createGroup.component.html
+++ b/src/main/resources/APachas/src/app/components/groups/createGroup/createGroup.component.html
@@ -17,7 +17,7 @@
                                 <label title="Cambiar imagen de grupo" for="createUserGroup_userGroupPhoto"
                                        (mouseover)="changeStyle($event)" (mouseout)="changeStyle($event)">
                                     <ng-container *ngIf="userGroup.groupPhoto; else imagesDiv">
-                                        <img class="image" [ngClass]="imageColor" [src]="userGroup.groupPhoto" alt=""
+                                        <img class="image imageColor2" [ngClass]="imageColor" [src]="userGroup.groupPhoto" alt=""
                                              id="createUserGroup_photo">
                                     </ng-container>
                                     <ng-template #imagesDiv>
