--- a/src/main/resources/APachas/src/app/components/home/home.component.html
+++ b/src/main/resources/APachas/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
-<div class="row mt-4">
-  <h2>Welcome {{loggedUser}}</h2>
+<div>
+  <h2 class="title" *ngIf="loggedUser != null">Bienvenido {{loggedUser}}</h2>
 </div>
