--- a/src/main/resources/APachas/src/app/components/authUser/email/retrievePassword/retrievePassword.component.css
+++ b/src/main/resources/APachas/src/app/components/authUser/email/retrievePassword/retrievePassword.component.css
@@ -7,6 +7,11 @@
     font-family: 'Poppins', sans-serif;
 }
 
+form{
+    margin-top: 10%;
+    width: 30%;
+}
+
 .inputs{
     width: 100%;
     padding: 10px;
@@ -47,7 +52,7 @@ h1{
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 2px;
-    margin-top: 30%;
+    margin-top: 10%;
     color: #66bb6a;
     text-align: center;
 }
@@ -58,7 +63,8 @@ image{
 
 .imageDiv{
     text-align: center;
-    margin-bottom: -40%;
+    margin-bottom: 10%;
+    margin-top: 20%;
 }
 
 .messageColor{
