--- a/src/main/resources/APachas/src/app/components/authUser/profile/detailProfile/detailProfile.component.html
+++ b/src/main/resources/APachas/src/app/components/authUser/profile/detailProfile/detailProfile.component.html
@@ -12,8 +12,7 @@
                         <img class="image" [src]="defaultImage">
                     </ng-template>
                 </div>
-                <div class="col-xxl-12 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-                    <p class="title">{{authUser.login}}</p>
+                <div class="col-xxl-12 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 titleclass">
                     <button type="button" class="button" data-bs-toggle="modal" data-bs-target="#editProfileModal">Editar perfil</button>
 
                 </div>
