--- a/src/main/resources/APachas/src/app/components/home/home.component.css
+++ b/src/main/resources/APachas/src/app/components/home/home.component.css
@@ -5,8 +5,8 @@
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 2px;
-    text-align: right;
+    text-align: center;
     margin-top: 15%;
-    margin-right: 25%;
     color: #555;
+
 }
