--- a/src/main/resources/APachas/src/app/components/authUser/profile/detailProfile/detailProfile.component.css
+++ b/src/main/resources/APachas/src/app/components/authUser/profile/detailProfile/detailProfile.component.css
@@ -16,13 +16,13 @@
 }
 
 .title{
-    padding-top: 50px;
+    padding-top: -20%;
     font-size: 60px;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 2px;
     text-align: center;
-    width: 100%;
+    width: 50%;
     color: #555;
 }
 
@@ -90,6 +90,7 @@
 }
 .button
 {
+    margin-top: 10%;
     padding: 10px;
     border: none;
     outline: none;
@@ -104,6 +105,10 @@
     transition: 0.5s;
     text-transform: uppercase;
     margin-left: 35%;
+}
+
+.titleclass{
+    margin-left: -5%;
 }
 
 .imageDiv{
