--- a/src/main/resources/APachas/src/app/components/groups/createGroup/createGroup.component.html
+++ b/src/main/resources/APachas/src/app/components/groups/createGroup/createGroup.component.html
@@ -102,7 +102,7 @@
                                     <ng-container *ngIf="item.userPhoto; else userPhotoDiv">
                                         <span class="ng-value-label" title="{{item.userLogin}}"><img
                                                 [src]="item.userPhoto" class="imageSelect"><p
-                                                class="selectedText">{{item.userLogin}}</p></span>
+                                                class="selectedText listSelect">{{item.userLogin}}</p></span>
                                     </ng-container>
                                     <ng-template #userPhotoDiv>
                                         <span class="ng-value-label" title="{{item.userLogin}}"><img
